--- a/templates/index.html
+++ b/templates/index.html
@@ -2,24 +2,45 @@
 <html>
 <head>
     <title>Главная</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 <body>
-<h1>Выберите диапазон данных</h1>
+<br>
+<h2>Выберите диапазон данных</h2>
 <form action="/" method="post">
+
     <label for="start_date">Дата от:</label>
-    <input type="date" id="start_date" name="start_date" required>
+    <input type="date" class="form-control" id="start_date" name="start_date" required>
     <label for="end_date">Дата до:</label>
-    <input type="date" id="end_date" name="end_date" required>
-    <button type="submit">Обновить</button>
+    <input type="date" class="form-control" id="end_date" name="end_date" required>
+    <br>
+    <button type="submit" class="btn btn-info">Обновить данные</button>
+
 </form>
+
 <hr>
 
-<div>
-    <a href="/numbers" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">По номерам</a><br>
-    <a href="/openers" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">По опенерам</a><br>
-    <a href="/hours" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">По часам</a><br>
-    <a href="/openernumber" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">По опенерам-номерам</a><br>
-    <a href="/openerhours" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">По опенерам-часам</a><br>
+<div align="center">
+    <a href="/numbers" class="btn btn-outline-success" role="button" aria-pressed="true">По номерам</a>
+    <a href="/openers" class="btn btn-outline-success" role="button" aria-pressed="true">По опенерам</a>
+    <a href="/hours" class="btn btn-outline-success" role="button" aria-pressed="true">По часам</a>
+    <a href="/openernumber" class="btn btn-outline-success" role="button" aria-pressed="true">По
+        опенерам-номерам</a>
+    <a href="/openerhours" class="btn btn-outline-success" role="button" aria-pressed="true">По опенерам-часам</a>
+
 </div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
