--- a/templates/index.html
+++ b/templates/index.html
@@ -6,22 +6,48 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
+<style>
+
+    input.form-control {
+        max-width: 300px;
+        padding: 8px;
+    }
+    button.btn-info {
+        margin-top: 10px;
+    }
+        /* Стилизация контейнера формы */
+    .form-container {
+        max-width: 400px; /* Максимальная ширина контейнера (примерное значение, можно изменить) */
+        margin: 0 auto; /* Центрирование по горизонтали: автоматические отступы слева и справа */
+        padding: 20px; /* Добавление внутренних отступов для внешнего вида */
+        border: 1px solid #ccc; /* Параметры границы для контейнера (необязательно) */
+
+    }
+        /* Стилизация контейнера кнопки */
+    .button-container {
+        text-align: center; /* Центрирование содержимого по горизонтали */
+    }
+</style>
 <body>
 <br>
-<h2>Выберите диапазон данных</h2>
-<form action="/" method="post">
-
-    <label for="start_date">Дата от:</label>
-    <input type="date" class="form-control" id="start_date" name="start_date" required>
-    <label for="end_date">Дата до:</label>
-    <input type="date" class="form-control" id="end_date" name="end_date" required>
-    <br>
-    <button type="submit" class="btn btn-info">Обновить данные</button>
-
-</form>
-
+<h1 align="center">Аналитика звонков</h1>
 <hr>
+<div class="form-container">
+    <p><strong>Выберите диапазон данных</strong></p>
+    <form action="/" method="post">
 
+        <label for="start_date">Дата начала:</label>
+        <input type="date" class="form-control" id="start_date" name="start_date" required>
+        <label for="end_date">Дата конца:</label>
+        <input type="date" class="form-control" id="end_date" name="end_date" required>
+        <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+            <button type="submit" class="btn btn-info">Обновить данные</button>
+        </div>
+
+    </form>
+</div>
+<hr>
+<h3 align="center">Отчеты</h3>
 <div align="center">
     <a href="/numbers" class="btn btn-outline-success" role="button" aria-pressed="true">По номерам</a>
     <a href="/openers" class="btn btn-outline-success" role="button" aria-pressed="true">По опенерам</a>
