--- a/templates/hours.html
+++ b/templates/hours.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-<h1>По часам</h1>
+<h1 align="center">По часам</h1>
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
 
