--- a/templates/numbers.html
+++ b/templates/numbers.html
@@ -37,7 +37,8 @@
     </style>
 </head>
 <body>
-<h1>По номерам телефона</h1>
+<h1 align="center">По номерам телефона</h1>
+
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
 
