--- a/templates/openerhours.html
+++ b/templates/openerhours.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>По опенерам номерам</title>
+    <title>По опенерам часам</title>
     <style>
         table {
             border-collapse: collapse;
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-<h1>Опенер-номер (% дозвонов)</h1>
+<h1 align="center">Опенер-часы (% дозвонов)</h1>
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
 
