--- a/templates/openernumber.html
+++ b/templates/openernumber.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-<h1>Опенер-номер (% дозвонов)</h1>
+<h1 align="center">Опенер-номер (% дозвонов)</h1>
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
 
