--- a/templates/openers.html
+++ b/templates/openers.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-<h1>По опенерам</h1>
+<h1 align="center">По опенерам</h1>
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
 
