Фильтры заработали, но нужно править подход их работы

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@
      }
 
 
+
 </style>
 <body>
 <br>
@@ -93,6 +94,9 @@
             </select>
             <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
                 <button type="submit" name="change_numbers" class="btn btn-info">Применить фильтр</button>
+            </div>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="dell_filters" class="btn btn-info">Удалить фильтры</button>
             </div>
 
         </form>
