Кнопка на главную

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,7 @@
 
 
 
+
 </style>
 <body>
 <br>
@@ -95,8 +96,9 @@
             <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
                 <button type="submit" name="change_numbers" class="btn btn-info">Применить фильтр</button>
             </div>
+            <br>
             <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
-                <button type="submit" name="dell_filters" class="btn btn-info">Удалить фильтры</button>
+                <button type="submit" name="dell_filters" class="btn btn-warning">Удалить фильтры</button>
             </div>
 
         </form>
