--- a/templates/openerhours.html
+++ b/templates/openerhours.html
@@ -48,8 +48,10 @@
 </head>
 <body>
 <h1 align="center">Опенер-часы (% дозвонов)</h1>
+
 <form action="/openerhours" method="post">
     <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+        <a href="/" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a>
         <button type="submit" class="btn btn-info" id="choice" name="choice" value="choice1">Переключиться на количество
             звонков
         </button>
