--- a/templates/openernumber.html
+++ b/templates/openernumber.html
@@ -50,9 +50,11 @@
 </head>
 <body>
 <h1 align="center">Опенер-номер (% дозвонов)</h1>
+
 <form action="/openernumber" method="post">
 
-    <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+    <div class="button-container">
+        <a href="/" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a><!-- Дополнительный контейнер для кнопки -->
         <button type="submit" class="btn btn-info" id="choice" name="choice" value="choice1">Переключиться на количество
             звонков
         </button>
