--- a/templates/hours.html
+++ b/templates/hours.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>По часам</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         table {
             border-collapse: collapse;
@@ -34,10 +36,13 @@
             background-color: lightgray;
         }
 
+
+
     </style>
 </head>
 <body>
 <h1 align="center">По часам</h1>
+<a href="/" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a>
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
 
@@ -67,6 +72,8 @@
             }
         }
     });
+
+
 
 
 </script>
