--- a/templates/openernumber.html
+++ b/templates/openernumber.html
@@ -51,10 +51,10 @@
 <body>
 <h1 align="center">Опенер-номер (% дозвонов)</h1>
 
-<form action="/openernumber" method="post">
+<form action="{{ url_for('calls_openernumber') }}" method="post">
 
     <div class="button-container">
-        <a href="/" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a><!-- Дополнительный контейнер для кнопки -->
+        <a href="{{ url_for('calls_main') }}" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a><!-- Дополнительный контейнер для кнопки -->
         <button type="submit" class="btn btn-info" id="choice" name="choice" value="choice1">Переключиться на количество
             звонков
         </button>
