--- a/templates/openernumber2.html
+++ b/templates/openernumber2.html
@@ -20,10 +20,10 @@
 <body>
 <h1 align="center">Опенер-номер (количество звонков)</h1>
 
-<form action="/openernumber" method="post">
+<form action="{{ url_for('calls_openernumber') }}" method="post">
 
     <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
-        <a href="/" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a>
+        <a href="{{ url_for('calls_main') }}" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a>
         <button type="submit" class="btn btn-info" id="choice" name="choice" value="choice2">Переключиться на процент
             дозвонов
         </button>
