Добавление функций и правки

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,6 +128,7 @@
         опенерам-номерам</a>
     <a href="{{ url_for('calls_openerhour') }}" class="btn btn-outline-success" role="button" aria-pressed="true">По
         опенерам-часам</a>
+    <a href="{{ url_for('calls_medtime') }}" class="btn btn-outline-success" role="button" aria-pressed="true">Среднее время</a>
 
 </div>
 
