--- a/templates/hours.html
+++ b/templates/hours.html
@@ -37,12 +37,103 @@
         }
 
 
-
     </style>
 </head>
+<style>
+
+    input.form-control {
+        max-width: 400px;
+        padding: 8px;
+    }
+    button.btn-info {
+        margin-top: 10px;
+    }
+    button.btn-warning {
+        margin-top: 10px;
+    }
+    button.btn-outline-success {
+        margin-top: 35px;
+
+    }
+        /* Стилизация контейнера формы */
+    .form-container {
+        max-width: 550px; /* Максимальная ширина контейнера (примерное значение, можно изменить) */
+        display: flex;
+        margin: 0 auto;
+        padding: 20px; /* Добавление внутренних отступов для внешнего вида */
+        border: 1px solid #ccc; /* Параметры границы для контейнера (необязательно) */
+
+    }
+        /* Стилизация контейнера кнопки */
+    .button-container {
+        text-align: center; /* Центрирование содержимого по горизонтали */
+    }
+    .button-settings{
+        text-align: right; /* Центрирование содержимого по горизонтали */
+        padding: 20px;
+    }
+
+    }
+    .form-openers{
+    order:1;
+    margin-left: 40px;
+
+    }
+    .form-numbers{
+    order:2;
+    margin-left: 40px;
+
+    }
+     select {
+            height: 200px; /* Установите желаемую высоту */
+            width: 220px;
+            font-size: 16px; /* Установите желаемый размер шрифта для опций */
+     }
+
+
+</style>
 <body>
 <h1 align="center">По часам</h1>
-<a href="{{ url_for('calls_main') }}" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a>
+
+<div class="form-container">
+    <div class="form-openers">
+        <p><strong>Выберите опенеров:</strong></p>
+        <form action="{{ url_for('calls_hours') }}" method="post">
+            <select id="dataList" name="options" multiple>
+                {% for item in data_list %}
+                <option value="{{ item }}">{{ item }}</option>
+                {% endfor %}
+            </select>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="change_openers" class="btn btn-info">Применить фильтр</button>
+            </div>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="go_main" class="btn btn-outline-success">На главную</button>
+            </div>
+
+        </form>
+    </div>
+    <div class="form-numbers">
+        <p><strong>Выберите номера:</strong></p>
+        <form action="{{ url_for('calls_hours') }}" method="post">
+            <select id="dataNumbers" name="options" multiple>
+                {% for item in numbers_list %}
+                <option value="{{ item }}">{{ item }}</option>
+                {% endfor %}
+            </select>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="change_numbers" class="btn btn-info">Применить фильтр</button>
+            </div>
+            <br>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="dell_filters" class="btn btn-warning">Сбросить фильтры</button>
+            </div>
+
+
+        </form>
+    </div>
+</div>
+<br>
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
 
@@ -72,8 +163,6 @@
             }
         }
     });
-
-
 
 
 </script>
