--- a/templates/openerhours.html
+++ b/templates/openerhours.html
@@ -35,71 +35,146 @@
         td.white {
             background-color: #fffaf0;
         }
+
+        input.form-control {
+        max-width: 400px;
+        padding: 8px;
+        }
         button.btn-info {
+            margin-top: 10px;
+        }
+        button.btn-outline-info {
         margin-top: 10px;
-        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
         }
 
-        .button-container {
-        text-align: center;
+        button.btn-warning {
+            margin-top: 10px;
         }
+        button.btn-outline-success {
+            margin-top: 35px;
+
+        }
+            /* Стилизация контейнера формы */
+        .form-container {
+            max-width: 560px; /* Максимальная ширина контейнера (примерное значение, можно изменить) */
+            display: flex;
+            margin: 0 auto;
+            padding: 20px; /* Добавление внутренних отступов для внешнего вида */
+            border: 1px solid #ccc; /* Параметры границы для контейнера (необязательно) */
+
+        }
+            /* Стилизация контейнера кнопки */
+        .button-container {
+            text-align: center; /* Центрирование содержимого по горизонтали */
+        }
+        .button-settings{
+            text-align: right; /* Центрирование содержимого по горизонтали */
+            padding: 20px;
+        }
+
+        }
+        .form-openers{
+        order:1;
+        margin-left: 40px;
+
+        }
+        .form-numbers{
+        order:2;
+        margin-left: 40px;
+
+        }
+         select {
+                height: 200px; /* Установите желаемую высоту */
+                width: 240px;
+                font-size: 16px; /* Установите желаемый размер шрифта для опций */
+         }
 
     </style>
 </head>
 <body>
 <h1 align="center">Опенер-часы (% дозвонов)</h1>
-
-<form action="{{ url_for('calls_openerhour') }}" method="post">
-    <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
-        <a href="{{ url_for('calls_main') }}" class="btn btn-outline-success" role="button" aria-pressed="true">На главную</a>
-        <button type="submit" class="btn btn-info" id="choice" name="choice" value="choice1">Переключиться на количество
-            звонков
-        </button>
+<div class="form-container">
+    <div class="form-openers">
+        <p><strong>Выберите опенеров:</strong></p>
+        <form action="{{ url_for('calls_openerhour') }}" method="post">
+            <select id="dataList" name="options" multiple>
+                {% for item in data_list %}
+                <option value="{{ item }}">{{ item }}</option>
+                {% endfor %}
+            </select>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="change_openers" class="btn btn-info">Применить фильтр</button>
+            </div>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="go_main" class="btn btn-outline-success">На главную</button>
+            </div>
+        </form>
     </div>
+    <div class="form-numbers">
+        <p><strong>Выберите номера:</strong></p>
+        <form action="{{ url_for('calls_openerhour') }}" method="post">
+            <select id="dataNumbers" name="options" multiple>
+                {% for item in numbers_list %}
+                <option value="{{ item }}">{{ item }}</option>
+                {% endfor %}
+            </select>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="change_numbers" class="btn btn-info">Применить фильтр</button>
+            </div>
+            <br>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="dell_filters" class="btn btn-warning">Сбросить фильтры</button>
+            </div>
+        </form>
+    </div>
+</div>
+<form action="{{ url_for('calls_openerhour') }}" method="post">
+    <button type="submit" class="btn btn-outline-info" id="choice" name="choice" value="choice1">Переключиться
+        на
+        количество
+        звонков
+    </button>
+    <br>
 </form>
 <!-- Вставляем таблицу с помощью переменной table -->
 {{ table | safe }}
-
 <script>
-        // JavaScript код для изменения цвета фона ячеек с процентами и звонками и преобразования в процентный формат
-        // Ваш шаблон должен иметь класс 'table' у элемента <table>
-        document.addEventListener('DOMContentLoaded', function() {
-            var table = document.querySelector('.table');
-            var rows = table.querySelectorAll('tbody tr');
+    // JavaScript код для изменения цвета фона ячеек с процентами и звонками и преобразования в процентный формат
+    // Ваш шаблон должен иметь класс 'table' у элемента <table>
+    document.addEventListener('DOMContentLoaded', function() {
+        var table = document.querySelector('.table');
+        var rows = table.querySelectorAll('tbody tr');
 
-            for (var i = 0; i < rows.length; i++) {
-                var cells = rows[i].querySelectorAll('td');
+        for (var i = 0; i < rows.length; i++) {
+            var cells = rows[i].querySelectorAll('td');
 
-                for (var j = 0; j < cells.length; j++) {
-                    var cellValue = parseFloat(cells[j].innerText);
+            for (var j = 0; j < cells.length; j++) {
+                var cellValue = parseFloat(cells[j].innerText);
 
-                    if (!isNaN(cellValue)) {
-                        var percentValue = (cellValue * 100).toFixed(0); // Округляем до 0 десятичных знаков
-                        cells[j].innerText = percentValue + '%';
+                if (!isNaN(cellValue)) {
+                    var percentValue = (cellValue * 100).toFixed(0); // Округляем до 0 десятичных знаков
+                    cells[j].innerText = percentValue + '%';
 
-                        if (cellValue >=0.01 && cellValue < 0.32 ) {
-                            cells[j].classList.add('red'); // Добавляем класс 'red' для красного фона
-                            cells[j].classList.remove('yellow', 'green'); // Удаляем классы для других цветов
-                        } else if (cellValue >= 0.32 && cellValue <= 0.36) {
-                            cells[j].classList.add('yellow'); // Добавляем класс 'yellow' для желтого фона
-                            cells[j].classList.remove('red', 'green'); // Удаляем классы для других цветов
-                        } else if (cellValue >= 0.37 && cellValue <= 1) {
-                            cells[j].classList.add('green'); // Добавляем класс 'yellow' для желтого фона
-                            cells[j].classList.remove('red', 'yellow'); // Удаляем классы для других цветов
-                        } else {
-                            cells[j].classList.add('white'); // Добавляем класс 'green' для зеленого фона
-                            cells[j].classList.remove('red', 'yellow','green'); // Удаляем классы для других цветов
-                        }
+                    if (cellValue >=0.01 && cellValue < 0.32 ) {
+                        cells[j].classList.add('red'); // Добавляем класс 'red' для красного фона
+                        cells[j].classList.remove('yellow', 'green'); // Удаляем классы для других цветов
+                    } else if (cellValue >= 0.32 && cellValue <= 0.36) {
+                        cells[j].classList.add('yellow'); // Добавляем класс 'yellow' для желтого фона
+                        cells[j].classList.remove('red', 'green'); // Удаляем классы для других цветов
+                    } else if (cellValue >= 0.37 && cellValue <= 1) {
+                        cells[j].classList.add('green'); // Добавляем класс 'yellow' для желтого фона
+                        cells[j].classList.remove('red', 'yellow'); // Удаляем классы для других цветов
+                    } else {
+                        cells[j].classList.add('white'); // Добавляем класс 'green' для зеленого фона
+                        cells[j].classList.remove('red', 'yellow','green'); // Удаляем классы для других цветов
                     }
                 }
             }
-        });
-
-
-
-
-
-
+        }
+    });
 
 
 </script>
